# my-digital-garden

./: .gitignore  README.md  features.md  main.py  pyproject.toml
.github/workflows/: build.yml
flutter/android/app/src/main/: AndroidManifest.xml
flutter/android/app/src/main/kotlin/com/mydigitalgarden/app/: MainActivity.kt
